# ete387

./: .gitattributes  .gitignore  README.md  devenv.nix  pyproject.toml
binder/: requirements.txt  start
labs/lab1/: metadata0.tsv  my-wiki-en-1m.txt.tok  my-wiki-is-1m.txt.tok  nlp-lab1.ipynb  vectors.tsv  vectors0.tsv  vectors1.tsv  vectors1_custom.tsv  wiki-en-1m.txt  wiki-is-1m.txt  wiki-sv-1m.tok  wiki-sv-1m.txt
labs/lab2/: gpt-2-fineweb-edu.pt  gpt-2-pretrained.npz  nlp-lab2.ipynb
labs/lab3/: gpt2.py  hellaswag-mini.jsonl  nlp-lab3.ipynb
labs/lab4/: nlp-lab4.ipynb
sessions/basic-text-processing/: basic-text-processing.ipynb
sessions/introduction-to-pytorch/: introduction-to-pytorch.ipynb
sessions/neural-bigram-model/: names.txt  neural-bigram-model.ipynb
sessions/statistical-bigram-model/: statistical-bigram-model.ipynb
