[project]
name = "ete387-students"
version = "2025.09.10"
description = "Course materials for ETE387 Natural Language Processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pip>=25.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
